Paradise Hotel Project Completed