@@ -30,33 +30,36 @@ import java.util.stream.Collectors;
 @RequestMapping("/auth")
 @RequiredArgsConstructor
 public class AuthController {
-    private  final UserService userService;
+    private final UserService userService;
     private final AuthenticationManager authenticationManager;
     private final JwtUtils jwtUtils;
 
-
-@PostMapping("/register-user")
-    public ResponseEntity<?> registerUser(User user){
-
-        try {
+    @PostMapping("/register-user")
+    public ResponseEntity<?> registerUser(@RequestBody User user){
+        try{
             userService.registerUser(user);
-            return ResponseEntity.ok("Registration Successful");
-        }catch (UserAlreadyExistsException e){
-            return  ResponseEntity.status(HttpStatus.CONFLICT).body(e.getMessage());
+            return ResponseEntity.ok("Registration successful!");
 
+        }catch (UserAlreadyExistsException e){
+            return ResponseEntity.status(HttpStatus.CONFLICT).body(e.getMessage());
         }
     }
 
     @PostMapping("/login")
-    public  ResponseEntity<?> authenticateUser(@Valid @RequestBody LoginRequest loginRequest ){
-
-        Authentication authentication= authenticationManager.authenticate(new UsernamePasswordAuthenticationToken(loginRequest.getEmail(),loginRequest.getPassword()));
-
+    public ResponseEntity<?> authenticateUser(@Valid @RequestBody LoginRequest request){
+        Authentication authentication =
+                authenticationManager
+                        .authenticate(new UsernamePasswordAuthenticationToken(request.getEmail(), request.getPassword()));
         SecurityContextHolder.getContext().setAuthentication(authentication);
-        String jwt= jwtUtils.generateJwtTokenForUser(authentication);
-        HotelUserDetails userDetails= (HotelUserDetails) authentication.getPrincipal();
-        List<String>  roles= userDetails.getAuthorities().stream().map(GrantedAuthority::getAuthority).collect(Collectors.toList());
-
-        return  ResponseEntity.ok(new JwtResponse(userDetails.getId(), userDetails.getEmail(),jwt, roles));
+        String jwt = jwtUtils.generateJwtTokenForUser(authentication);
+        HotelUserDetails userDetails = (HotelUserDetails) authentication.getPrincipal();
+        List<String> roles = userDetails.getAuthorities()
+                .stream()
+                .map(GrantedAuthority::getAuthority).toList();
+        return ResponseEntity.ok(new JwtResponse(
+                userDetails.getId(),
+                userDetails.getEmail(),
+                jwt,
+                roles));
     }
 }
